tests/NormalTests/paczka1/fuzzy1/57227946.err
Error in line 1: esKuY A67 74,1
Error in line 12: A67 A373 25,2
Error in line 17: MEJGlQ4Xpqq A901 27,2
Error in line 29: MEJGlQ4Xpqq A901 93,5
Error in line 35: MEJGlQ4Xpqq A154 30,2
